--- a/Shopping.html
+++ b/Shopping.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #e0f7fa;
         }
         header {
             background-color: #333;
