--- a/Shopping.html
+++ b/Shopping.html
@@ -62,8 +62,24 @@
             background-color: #2f14b8;
         }
         .customize {
-            background-color: green;
+            background-color: rgb(26, 187, 26);
         }
+        .add-to-cart{
+            background-color: #300de0;
+        }
+        h1 {
+            background-color: #5793bb;
+            font-size: 30;
+            margin: 0;
+            font: 100% ,times new roman;
+            padding: 20px;
+        }
+        #product1 {
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px; 
+        }
+        
     </style>
 </head>
 <body>
@@ -72,21 +88,21 @@
     </header>
     <div class="container">
         <div class="product">
-            <img src="c:\Users\kwabe\Downloads\photo_2025-01-10_18-24-36.jpg" alt="Birkenstock Sandal">
+            <img src="c:\Users\kwabe\Downloads\Birks8.jpg.jpg" alt="Tan Birkenstock Arizona sandal displayed on a white surface, sandal features two adjustable straps with metal buckles, bright and inviting shop environment">
             <h2>Birkenstock Arizona</h2>
             <p>Comfortable and stylish sandals for everyday wear.</p>
             <button class="add-to-cart">Add to Cart</button>
             <button class="customize">Customize Product</button>
         </div>
         <div class="product">
-            <img src="c:\Users\kwabe\Downloads\Birks8.jpg.jpg" alt="Birkenstock Sandal">
+            <img src="c:\Users\kwabe\Downloads\bluesands.jpg" alt="Birkenstock Sandal">
             <h2>Blue birkenstock</h2>
             <p>Elegant and versatile sandals for any occasion.</p>
             <button class="add-to-cart">Add to Cart</button>
             <button class="customize">Customize Product</button>
         </div>
         <div class="product">
-            <img src="c:\Users\kwabe\Downloads\bluesands.jpg" alt="Birkenstock Sandal">
+            <img src="c:\Users\kwabe\Downloads\my ads\birkenstock_27450_1.webp" alt="Birkenstock Sandal">
             <h2>Black Pair Birkenstock Arizona</h2>
             <p>Comfortable and stylish sandals for everyday wear.</p>
             <button class="add-to-cart">Add to Cart</button>
@@ -99,6 +115,14 @@
             <button class="add-to-cart">Add to Cart</button>
             <button class="customize">Customize Product</button>
         </div>
+    </div>
+    <div class="product">
+        <img src="c:\Users\kwabe\Downloads\my ads\s-l400.jpg"><img src="c:\Users\kwabe\Downloads\OIP.jpg">
+        <h2>Sweet Beige Unisex Birkenstock</h2>
+        <p>Easy to wear, Buckle,Waterproof</p>
+        <button class="add-to-cart">Add to cart</button>
+        <button class="customize"> Customize product</button>
+
     </div>
     <script>
         document.querySelectorAll('.add-to-cart').forEach(function(btn) {
