about page added

--- a/Shopping.html
+++ b/Shopping.html
@@ -11,28 +11,28 @@
     </header>
     <div class="container">
         <div class="product">
-            <img src="c:\Users\kwabe\Downloads\Birks8.jpg.jpg" alt="Tan Birkenstock Arizona sandal displayed on a white surface, sandal features two adjustable straps with metal buckles, bright and inviting shop environment">
+            <img src="https://www.birkenstock.in/cdn/shop/products/752481_pair_fde8209e-096a-47cd-bcbc-69546f2bec7c.jpg?v=1637819063&width=1500" alt="Tan Birkenstock Arizona sandal displayed on a white surface, sandal features two adjustable straps with metal buckles, bright and inviting shop environment">
             <h2>Birkenstock Arizona</h2>
             <p>Comfortable and stylish sandals for everyday wear.</p>
             <button class="add-to-cart">Add to Cart</button>
             <button class="customize">Customize Product</button>
         </div>
         <div class="product">
-            <img src="c:\Users\kwabe\Downloads\bluesands.jpg" alt="Birkenstock Sandal">
+            <img src="https://craftshopbantry.com/cdn/shop/files/IMG_4836.jpg?v=1706719000" alt="Birkenstock Sandal">
             <h2>Blue birkenstock</h2>
             <p>Elegant and versatile sandals for any occasion.</p>
             <button class="add-to-cart">Add to Cart</button>
             <button class="customize">Customize Product</button>
         </div>
         <div class="product">
-            <img src="c:\Users\kwabe\Downloads\my ads\birkenstock_27450_1.webp" alt="Birkenstock Sandal">
+            <img src="https://www.birkenstock.com/on/demandware.static/-/Sites-master-catalog/default/dwdd90a709/660473/660473_pair.jpg" alt="Birkenstock Sandal">
             <h2>Black Pair Birkenstock Arizona</h2>
             <p>Comfortable and stylish sandals for everyday wear.</p>
             <button class="add-to-cart">Add to Cart</button>
             <button class="customize">Customize Product</button>
         </div>
         <div class="product"> 
-            <img src="c:\Users\kwabe\Downloads\Brown boy.jpg">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcd6uXM3PCbaUXkxSNKPA_AeLf7GxYLZ8wLg&s">
             <h2>Hazy Brown Birkenstock For Men</h2>
             <p>Waterproof, Sizeable and velcro</p>
             <button id="add-to-cart">Add to Cart</button>
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="product">
-        <img src="c:\Users\kwabe\Downloads\my ads\s-l400.jpg"><img src="c:\Users\kwabe\Downloads\OIP.jpg">
+        <img src="https://footprints.com/cdn/shop/files/24AW_BigBuckle_PI_1026553_02-large.jpg?v=1730845042&width=1840"><img src="c:\Users\kwabe\Downloads\OIP.jpg">
         <h2>Sweet Beige Unisex Birkenstock</h2>
         <p>Easy to wear, Buckle,Waterproof</p>
         <button id="add-to-cart">Add to cart</button>
@@ -48,5 +48,12 @@
 
     </div>
     <script src="Script.js"></script>
+    <footer>
+        <p>&copy; 2023 Kay Birks Shop. All rights reserved.</p>
+        <p>Contact us at <a href="About.html">About Us</a></p>
+            <p>About us</p>
+    </footer>
+
+
 </body>
 </html>
