small adjust ments

--- a/Home.html
+++ b/Home.html
@@ -33,6 +33,7 @@
             <p>Discover premium Birkenstock sandals with comfort and style</p>
             <div class="color-theme-selector">
                 <label>Choose Theme:</label>
+                <button class="theme-btn active" data-theme="blue">Blue</button>
                 <button class="theme-btn" data-theme="default">Default</button>
                 <button class="theme-btn" data-theme="dark">Dark</button>
                 <button class="theme-btn" data-theme="nature">Nature</button>
@@ -182,8 +183,8 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="product" data-id="7">
+ 
+               <div class="product" data-id="7">
                     <div class="product-image-container">
                         <img src="https://photos6.rubbersole.co.uk/photos/189/18980399/18980399_1200_A.jpg" alt="Red Greasy Birkenstock">
                         <div class="product-overlay">
@@ -201,6 +202,52 @@
                         </div>
                         <div class="product-actions">
                             <button class="add-to-cart" data-name="Red Greasy Birkenstock" data-price="154.99" data-image="https://photos6.rubbersole.co.uk/photos/189/18980399/18980399_1200_A.jpg">Add to Cart</button>
+                            <button class="customize">Customize</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product" data-id="8">
+                    <div class="product-image-container">
+                        <img src="https://www.palmettomoononline.com/cdn/shop/files/R552681_BIRKFLORWHITE_2_1200x.jpg?v=1711641882" alt="White Clear Birkenstock">
+                        <div class="product-overlay">
+                            <button class="quick-view">Quick View</button>
+                        </div>
+                    </div>
+                    <div class="product-info">
+                        <h3>White Clear Birkenstock</h3>
+                        <p>Easy to wear, Buckle, Waterproof</p>
+                        <div class="price">$200.99</div>
+                        <div class="color-options">
+                            <span class="color-dot" data-color="#FFFFFF" style="background-color: #FFFFFF;"></span>
+                            <span class="color-dot" data-color="#F8F8FF" style="background-color: #F8F8FF;"></span>
+                            <span class="color-dot" data-color="#F0F8FF" style="background-color: #F0F8FF;"></span>
+                        </div>
+                        <div class="product-actions">
+                            <button class="add-to-cart" data-name="White Clear Birkenstock" data-price="200.99" data-image="https://www.palmettomoononline.com/cdn/shop/files/R552681_BIRKFLORWHITE_2_1200x.jpg?v=1711641882">Add to Cart</button>
+                            <button class="customize">Customize</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product" data-id="9">
+                    <div class="product-image-container">
+                        <img src="https://craftshopbantry.com/cdn/shop/files/IMG_9217_c6573ca0-cde6-4c9e-b4fd-d063b337b51a_1400x.jpg?v=1724187288" alt="Purple Paint Birkenstock">
+                        <div class="product-overlay">
+                            <button class="quick-view">Quick View</button>
+                        </div>
+                    </div>
+                    <div class="product-info">
+                        <h3>Purple Paint Birkenstock</h3>
+                        <p>Easy to wear, Buckle, Waterproof</p>
+                        <div class="price">$450.99</div>
+                        <div class="color-options">
+                            <span class="color-dot" data-color="#800080" style="background-color: #800080;"></span>
+                            <span class="color-dot" data-color="#9370DB" style="background-color: #9370DB;"></span>
+                            <span class="color-dot" data-color="#8A2BE2" style="background-color: #8A2BE2;"></span>
+                        </div>
+                        <div class="product-actions">
+                            <button class="add-to-cart" data-name="Purple Paint Birkenstock" data-price="450.99" data-image="https://craftshopbantry.com/cdn/shop/files/IMG_9217_c6573ca0-cde6-4c9e-b4fd-d063b337b51a_1400x.jpg?v=1724187288">Add to Cart</button>
                             <button class="customize">Customize</button>
                         </div>
                     </div>
