added backend to my code

--- a/About.html
+++ b/About.html
@@ -104,7 +104,7 @@
                 <div class="showcase-grid">
                     <div class="showcase-item">
                         <div class="showcase-circle">
-                            <img src="https://footwearetc.com/cdn/shop/files/ihwx.2425E700-E7D7-4CD8-B254-53243D13C8D3.1500.1500.jpg?v=1740831652" alt="Birkenstock Mayari">
+                            <img src="https://www.birkenstock.in/cdn/shop/files/1029143.png?v=1740146356" alt="Birkenstock Mayari">
                         </div>
                         <div class="showcase-label">
                             <h4>Mayari</h4>
